add: day-07; refactor: shared module and utilies for generic execution

--- a/2025/common/Cargo.toml
+++ b/2025/common/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "day-03"
+name = "aoc"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 anyhow = "1.0"
-aoc = { path = "../common" }
